--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,7 @@ dependencies {
     compile 'com.android.support:palette-v7:23.0.1'
     compile 'com.pnikosis:materialish-progress:1.5'
     compile 'com.jenzz:materialpreference:1.3'
+    compile 'com.facebook.fresco:fresco:0.10.0'
+    compile "com.facebook.fresco:imagepipeline-okhttp3:0.10.0"
+    compile 'com.facebook.fresco:animated-gif:0.10.0'
 }
