--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 23
@@ -34,13 +35,18 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'com.rengwuxian.materialedittext:library:2.1.3'
-    compile 'com.google.dagger:dagger:2.0.1'
-    compile 'com.android.support:recyclerview-v7:23.0.1'
-    compile 'com.android.support:cardview-v7:23.0.1'
-    compile 'com.android.support:palette-v7:23.0.1'
+
+    //Dagger2
+    provided 'javax.annotation:javax.annotation-api:1.2'
+    compile 'com.google.dagger:dagger:2.0.2'
+    apt 'com.google.dagger:dagger-compiler:2.0.2'
+
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.android.support:palette-v7:23.4.0'
     compile 'com.pnikosis:materialish-progress:1.5'
     compile 'com.jenzz:materialpreference:1.3'
     compile 'com.facebook.fresco:fresco:0.10.0'
-    compile "com.facebook.fresco:imagepipeline-okhttp3:0.10.0"
+    compile 'com.facebook.fresco:imagepipeline-okhttp3:0.10.0'
     compile 'com.facebook.fresco:animated-gif:0.10.0'
 }
