--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,12 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -26,19 +32,13 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".ui.activity.LoginActivity"
-            android:label="@string/title_activity_login">
+        <activity android:name=".ui.activity.LoginActivity"/>
 
-        </activity>
+        <activity android:name=".ui.activity.WelcomeActivity"
+            android:theme="@style/FullscreenTheme" />
 
-        <activity
-            android:name=".ui.activity.WelcomeActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_welcome"
-            android:theme="@style/FullscreenTheme">
+        <activity android:name=".ui.activity.SettingsActivity"/>
 
-        </activity>
     </application>
 
 </manifest>
