--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
+// lambda
+//apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 23
@@ -35,7 +37,8 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'com.rengwuxian.materialedittext:library:2.1.3'
-
+    compile 'com.github.clans:fab:1.6.2'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
     //Dagger2
     provided 'javax.annotation:javax.annotation-api:1.2'
     compile 'com.google.dagger:dagger:2.0.2'
