--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,32 +22,37 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:palette-v7:25.3.1'
+
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
+
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
     compile 'com.google.code.gson:gson:2.7'
+
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'com.rengwuxian.materialedittext:library:2.1.3'
     compile 'com.github.clans:fab:1.6.2'
-    compile 'de.hdodenhof:circleimageview:1.3.0'
-    //Dagger2
-    provided 'javax.annotation:javax.annotation-api:1.2'
-    compile 'com.google.dagger:dagger:2.0.2'
-    apt 'com.google.dagger:dagger-compiler:2.0.2'
-
     compile 'com.pnikosis:materialish-progress:1.5'
     compile 'com.jenzz:materialpreference:1.3'
+
     compile 'com.facebook.fresco:fresco:0.10.0'
     compile 'com.facebook.fresco:imagepipeline-okhttp3:0.10.0'
     compile 'com.facebook.fresco:animated-gif:0.10.0'
+
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.22'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    //Dagger2
+    apt 'com.google.dagger:dagger-compiler:2.0.2'
+    compile 'com.google.dagger:dagger:2.0.2'
+    provided 'javax.annotation:javax.annotation-api:1.2'
+    testCompile 'junit:junit:4.12'
 }
