--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         <activity android:name=".ui.activity.dialog.ProgressDialogActivity" />
         <activity android:name=".ui.activity.dialog.TimePikerDialogActivity" />
         <activity android:name=".ui.activity.dialog.ListViewDialogActivity" />
+        <activity android:name=".ui.activity.button.ShareButtonActivity" />
     </application>
 
 </manifest>
