--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,12 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:palette-v7:25.3.1'
+    compile "com.android.support:appcompat-v7:${support_version}"
+    compile "com.android.support:support-v4:${support_version}"
+    compile "com.android.support:design:${support_version}"
+    compile "com.android.support:recyclerview-v7:${support_version}"
+    compile "com.android.support:cardview-v7:${support_version}"
+    compile "com.android.support:palette-v7:${support_version}"
 
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
@@ -42,16 +42,19 @@ dependencies {
     compile 'com.github.clans:fab:1.6.2'
     compile 'com.pnikosis:materialish-progress:1.5'
     compile 'com.jenzz:materialpreference:1.3'
-
-    compile 'com.facebook.fresco:fresco:0.10.0'
-    compile 'com.facebook.fresco:imagepipeline-okhttp3:0.10.0'
-    compile 'com.facebook.fresco:animated-gif:0.10.0'
-
+    compile 'me.fattycat.kun:imagechooserdialog:1.0.1'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.22'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     //Dialog
     compile 'com.github.javiersantos:MaterialStyledDialogs:2.1'
     compile 'com.labo.kaji:swipeawaydialog:0.1.1'
+    //购物车按钮控件
+    compile 'com.github.mcxtzhang:AnimShopButton:V1.2.0'
+    //Image框架
+    compile 'com.facebook.fresco:fresco:0.10.0'
+    compile 'com.facebook.fresco:imagepipeline-okhttp3:0.10.0'
+    compile 'com.facebook.fresco:animated-gif:0.10.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 
     //Dagger2
     apt 'com.google.dagger:dagger-compiler:2.0.2'
