--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,6 @@ dependencies {
     compile "com.android.support:design:${support_version}"
     compile "com.android.support:recyclerview-v7:${support_version}"
     compile "com.android.support:cardview-v7:${support_version}"
-    compile "com.android.support:palette-v7:${support_version}"
 
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
@@ -44,7 +43,7 @@ dependencies {
     compile 'com.jenzz:materialpreference:1.3'
     compile 'me.fattycat.kun:imagechooserdialog:1.0.1'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.22'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.youth.banner:banner:1.4.10'
     //Dialog
     compile 'com.github.javiersantos:MaterialStyledDialogs:2.1'
     compile 'com.labo.kaji:swipeawaydialog:0.1.1'
