--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".config.AndroidWorldApplication"
+        android:name=".config.CustomApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -29,11 +29,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.HomeActivity" >
-
-        </activity>
+        <activity android:name=".ui.activity.HomeActivity" />
         <activity android:name=".ui.activity.LoginActivity" />
         <activity android:name=".ui.activity.SettingsActivity" />
+        <activity android:name=".ui.activity.WebActivity" />
         <activity android:name=".ui.activity.WidgetsActivity" />
         <activity android:name=".ui.activity.piechart.PieChartActivity" />
         <activity android:name=".ui.activity.event.DispatchTouchEventActivity" />
@@ -58,6 +57,7 @@
         <activity android:name=".ui.activity.thread.HandlerThreadActivity" />
         <activity android:name=".ui.activity.thread.ThreadPoolActivity" />
         <activity android:name=".ui.activity.thread.IntentServiceActivity" />
+        <activity android:name=".ui.activity.edittext.ContactEditTextActivity" />
         <!--Service-->
         <service android:name=".ui.activity.thread.intentService.MyIntentService" />
     </application>
